--- a/html/product.html
+++ b/html/product.html
@@ -93,7 +93,7 @@
     <h2>labtop desk</h2>
     <h4>price:1000EG</h4>
     <p>
-        Laptop Desk, INAYA Portable Laptop Bed Tray Table Notebook Stand Reading Holder with Foldable Legs & Cup Slot for Eating Breakfast, Reading Book, Watching Movie on Bed/Couch/Sofa (Wooden Brown)
+        Laptop Desk, INAYA Portable Laptop Bed Tray Table Notebook Stand Reading Holder with Foldable Legs & Cup Slot for Eating Breakfast,
     </p>
     <button >buy</button>
 
