--- a/html/product.html
+++ b/html/product.html
@@ -103,8 +103,7 @@
     <h2>usb c</h2>
     <h4>price:400EG</h4>
     <p>
-        USB C to HDMI Adaptor 3 in 1, aifulo USB Type C Adapter Multiport Converter with 4K HDMI Output, USB 3.0 Port and USB C Fast Charging Port Compatible with MBook,Chromebook,Laptops and more
-    </p>
+        USB C to HDMI Adaptor 3 in 1, aifulo USB Type C Adapter Multiport Converter with 4K HDMI Output, USB 3.0 Port and USB C Fast Charging Port Compatible with MBook,
     <button>buy</button>
 
 </div>
