--- a/html/contact.html
+++ b/html/contact.html
@@ -43,7 +43,7 @@
 <input type="text" placeholder="Enter your name">
 </div>
 <div class="input2">
-<input type="email" placeholder="Enter your Emain address">
+<input type="email" placeholder="Enter your Email address">
 </div>
 <textarea>
   Go a head we are listing
