--- a/html/contact.html
+++ b/html/contact.html
@@ -49,7 +49,7 @@
   Go a head we are listing
 </textarea>
 <div class="submit">
-<input type="submit" value="submit">
+<input type="submit" value="submit" onclick="method2()">
 </div>
 </form>
 <div class="icons">
